# termlaunch

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  example.toml
src/: app.rs  applications.rs  apps.rs  config.rs  image.rs  main.rs
