[package]
name = "termlaunch"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "[WIP] Launch your desktop applications through a terminal emulator"
categories = ["command-line-utilities"]
keywords = ["terminal", "desktop", "application", "launcher"]
repository = "https://github.com/amaterasu-uwu-xd/termrun"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
freedesktop-file-parser = "0.1.3"
freedesktop-icons = "0.4.0"
fs4 = "0.13.1"
image = "0.25.6"
ratatui = { version = "0.29.0", features = ["serde"] }
ratatui-image = "5.0.0"
resvg = "0.45.1"
rustix = { version = "1.0.5", features = ["process"] }
serde = "1.0.219"
toml = "0.8.21"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
incremental = true  # Improves re-compile times
codegen-units = 1
debug = "full"
panic = "abort"

